fix: overflow mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,4 @@
 .header{
     margin-top: 48px;
-    border-radius: 4px;
-    overflow: hidden;
+    margin-bottom: 48px;    
 }
